--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
   <head>
-    
+    <link rel="stylesheet" href="style1.css" />
     <title>Webpage</title>
   </head>
 
   <body>
+	<img src ="vicko.jpg">
+	<h3>Tugas Pemrogaman Berbasis Web</h3>
 
    <a href="biodata.html">Link Biodata Diri</a>
 	<br>
 	<br>
    <a href="form.html">Link Form pendaftaran</a>
+
     
 
   </body>
